Comment code to play 5 rounds, add html button

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+     <div class="game-buttons">
+        <button id="rock-button">Rock</button>
+        <button id="paper-button">Paper</button>
+        <button id="scissors-button">Scissors</button>
+    </div>
 
-    <<script src="script.js"></script>
+    <script src="script.js"></script>
+   
 
 
 </body>
