--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-     <div class="game-buttons">
-        <button id="rock-button">Rock</button>
-        <button id="paper-button">Paper</button>
-        <button id="scissors-button">Scissors</button>
+    <div class="game">
+        <div class="game-scores">
+            <h2 id="human-score">Human: 0</h1>
+            <h2 id="computer-score">Computer: 0</h2>
+        </div>
+        <div class="game-buttons">
+            <button id="rock-button">Rock</button>
+            <button id="paper-button">Paper</button>
+            <button id="scissors-button">Scissors</button>
+        </div>
     </div>
 
     <script src="script.js"></script>
    
-
-
 </body>
 </html>
